# sociall-digital-core

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  vite.config.mjs
docs/: index.md
docs/stylesheets/: extra.css
env_files/: .env.example
scripts/: entrypoint.dev.sh
src/apps/portfolio/: admin.py  models.py  views.py
src/apps/portfolio/migrations/: 0001_initial.py  0002_alter_projectcategory_options.py
src/core/: settings.py  urls.py
src/static/js/: main.js
src/templates/: base.html
src/templates/portfolio/: index.html
