[project]
name = "socialldigital"
version = "0.1.0"
description = "Aplicação web full stack, feito para a Agência de Marketing e Publicidade Sociall Digital. Conta com funcionalidades de blog, portfólio de projetos, formulário de contato e sistema de login."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-vite>=3.1.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "ruff>=0.11.6",
    "taskipy>=1.14.1",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLC0415', 'PLC2801', 'PLR2004']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'core.settings'
python_files = ['test*.py', '*_test.py', 'test_*.py']
pythonpath = ['src']
addopts = '-p no:warnings'

[tool.taskipy.tasks]
# Executa verificação de código com Ruff
lint = 'ruff check'

# Executa correções automáticas antes da formatação
pre_format = 'ruff check --fix'
# Formata o código usando Ruff
format = 'ruff format'

# Executa lint antes de criar migrações
pre_makemigrations = 'task lint'
# Cria novas migrações do Django dentro do container
makemigrations = 'docker-compose run --rm sociall_digital_web sh -c "python src/manage.py makemigrations"'

# Executa lint antes de criar novo app
# Exemplo de uso: task app meu_app
pre_app = 'task lint'
# Cria um novo app Django dentro do container
app = 'docker-compose run --rm sociall_digital_web bash -c "cd src/apps && python ../manage.py startapp'

# Executa lint antes de construir containers
pre_build = 'task lint'
# Constrói e inicia os containers
build = 'docker-compose up --build'

# Executa lint antes de iniciar containers
pre_up = 'task lint'
# Inicia os containers
up = 'docker-compose up'

# Executa lint antes de iniciar containers em modo daemon
pre_up-d = 'task lint'
# Inicia os containers em modo daemon (background)
up-d = 'docker-compose up -d'

# Para os containers antes de remover
pre_down = 'docker-compose stop'
# Remove os containers
down = 'docker-compose down'

# Rodar o MKDocs na porta 8080
# Evita conflito com o Django
docs = 'mkdocs serve -a 127.0.0.1:8080'